# harness-cli

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  commands.md  distribution.md  endpoint-coverage.md
scripts/: build_search_index.py  build_standalone.py  render_homebrew_formula.py  update_openapi_manifest.py  validate_openapi_manifest.py
src/harness_cli/: __init__.py  cli.py  config.py  http.py  manifest.py  render.py  search.py
src/harness_cli/data/: __init__.py
tests/: __init__.py  test_cli.py  test_config.py  test_http.py  test_manifest.py  test_render.py
